# core

./: .gitignore  CMakeLists.txt
external_include/: mb_rt.h  mb_rt_type.h
include/: mb_core.h  mb_core_type.h
src/: mb.c  mb_core_internal.h  mb_delete.c  mb_free.c  mb_new.c
